Propuesta templateable, dinamico, adaptable por marca, version y segmento....
